tests/functional/data/transpiler/common/errors/kernel/no_kernel2.cpp
void hello_kern() {
    for (int i = 0; i < 10; ++i) {
        for (int j = 0; j < 10; ++j) {
        }
    }
}
